y.output
Grammar

    0 $accept: programa $end

    1 $@1: /* empty */

    2 $@2: /* empty */

    3 $@3: /* empty */

    4 programa: PROGRAM ID SEMICOLON $@1 variables mapa $@2 funcion $@3 bloque

    5 $@4: /* empty */

    6 variables: VARS tipo COLON ID $@4 listaids SEMICOLON varsotrotipo
    7          | /* empty */

    8 $@5: /* empty */

    9 listaids: COMMA ID $@5 listaids
   10         | /* empty */

   11 $@6: /* empty */

   12 varsotrotipo: tipo COLON ID $@6 listaids SEMICOLON varsotrotipo
   13             | /* empty */

   14 $@7: /* empty */

   15 $@8: /* empty */

   16 funcion: tipoovoid ID $@7 LEFTPARENTHESIS parametros RIGHTPARENTHESIS bloque $@8 funcion
   17        | /* empty */

   18 tipoovoid: tipo
   19          | VOID

   20 $@9: /* empty */

   21 parametros: tipo ID $@9 listaparametros
   22           | /* empty */

   23 listaparametros: COMMA parametros
   24                | /* empty */

   25 mapa: MAPSIZE expresion SEMICOLON

   26 bloque: LEFTBRACKET estatuto e6 RIGHTBRACKET

   27 e6: estatuto e6
   28   | /* empty */

   29 estatuto: asignacion
   30         | condicion
   31         | escritura
   32         | ciclowhile
   33         | ciclodowhile
   34         | regreso
   35         | llamadafuncion SEMICOLON
   36         | agregar
   37         | remover

   38 asignacion: porasignar signo loasignado

   39 porasignar: asignable porasignar2

   40 porasignar2: X
   41            | Y
   42            | /* empty */

   43 signo: SIGN
   44      | AT

   45 loasignado: expresion SEMICOLON
   46           | entidad SEMICOLON

   47 escritura: DRAW LEFTPARENTHESIS expresion RIGHTPARENTHESIS SEMICOLON

   48 $@10: /* empty */

   49 $@11: /* empty */

   50 ciclowhile: WHILE $@10 LEFTPARENTHESIS expresion RIGHTPARENTHESIS $@11 bloque

   51 $@12: /* empty */

   52 ciclodowhile: DO $@12 bloque WHILE LEFTPARENTHESIS expresion RIGHTPARENTHESIS SEMICOLON

   53 $@13: /* empty */

   54 condicion: IF LEFTPARENTHESIS expresion RIGHTPARENTHESIS $@13 bloque condicionelse

   55 $@14: /* empty */

   56 condicionelse: ELSE $@14 bloque
   57              | /* empty */

   58 $@15: /* empty */

   59 llamadafuncion: ID LEFTPARENTHESIS $@15 llamadafuncion2

   60 llamadafuncion2: RIGHTPARENTHESIS
   61                | paramsllamada RIGHTPARENTHESIS

   62 $@16: /* empty */

   63 $@17: /* empty */

   64 paramsllamada: $@16 expresion $@17 paramsllamada2

   65 paramsllamada2: /* empty */
   66               | COMMA paramsllamada

   67 regreso: RETURN expresion SEMICOLON

   68 lista: LIST tiposimple

   69 tipo: tiposimple
   70     | lista

   71 tiposimple: INT
   72           | FLOAT
   73           | POS
   74           | BOOLEAN
   75           | STRING
   76           | ENTITY

   77 agregar: ID ADD LEFTPARENTHESIS expresion RIGHTPARENTHESIS SEMICOLON

   78 remover: ID REM SEMICOLON

   79 $@18: /* empty */

   80 expresion: exp $@18 expresion2

   81 $@19: /* empty */

   82 expresion2: operadorexpresion $@19 expresion
   83           | /* empty */

   84 operadorexpresion: OR
   85                  | AND
   86                  | EQUALMORETHAN
   87                  | EQUALLESSTHAN
   88                  | MORETHAN
   89                  | LESSTHAN
   90                  | EQUALS
   91                  | NOT

   92 $@20: /* empty */

   93 exp: termino $@20 exp2

   94 $@21: /* empty */

   95 exp2: operadorexp $@21 exp
   96     | /* empty */

   97 operadorexp: PLUS
   98            | MINUS

   99 $@22: /* empty */

  100 termino: factor $@22 termino2

  101 $@23: /* empty */

  102 termino2: operadortermino $@23 termino
  103         | /* empty */

  104 operadortermino: MULTIPLICATION
  105                | DIVISION

  106 factor: obtenerxy factor2

  107 factor2: operadorfactor
  108        | /* empty */

  109 operadorfactor: X
  110               | Y

  111 $@24: /* empty */

  112 obtenerxy: LEFTPARENTHESIS $@24 expresion RIGHTPARENTHESIS
  113          | PLUS varcte
  114          | MINUS varcte
  115          | varcte

  116 varcte: asignable
  117       | CTEINT
  118       | CTEFLOAT
  119       | CTESTRING
  120       | TRUE
  121       | FALSE
  122       | CTEPOS
  123       | llamadafuncion

  124 $@25: /* empty */

  125 asignable: ID $@25 elemento

  126 elemento: COLON LEFTSQUAREBRACKET expresion RIGHTSQUAREBRACKET
  127         | /* empty */

  128 $@26: /* empty */

  129 $@27: /* empty */

  130 entidad: ENTITY LEFTPARENTHESIS expresion $@26 COMMA SPRITE expresion $@27 COMMA expresion RIGHTPARENTHESIS


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 4 6 9 12 16 21 59 77 78 125
CTESTRING (259) 119
CTEINT (260) 117
CTEFLOAT (261) 118
CTEPOS (262) 122
TRUE (263) 120
FALSE (264) 121
PROGRAM (265) 4
VARS (266) 6
MAPSIZE (267) 25
DO (268) 52
WHILE (269) 50 52
IF (270) 54
ELSE (271) 56
RETURN (272) 67
DRAW (273) 47
VOID (274) 19
INT (275) 71
FLOAT (276) 72
POS (277) 73
BOOLEAN (278) 74
STRING (279) 75
ENTITY (280) 76 130
SPRITE (281) 130
ADD (282) 77
REM (283) 78
X (284) 40 109
Y (285) 41 110
LIST (286) 68
PLUS (287) 97 113
MINUS (288) 98 114
MULTIPLICATION (289) 104
DIVISION (290) 105
SIGN (291) 43
AT (292) 44
OR (293) 84
AND (294) 85
EQUALS (295) 90
EQUALMORETHAN (296) 86
EQUALLESSTHAN (297) 87
NOT (298) 91
LESSTHAN (299) 89
MORETHAN (300) 88
LEFTPARENTHESIS (301) 16 47 50 52 54 59 77 112 130
RIGHTPARENTHESIS (302) 16 47 50 52 54 60 61 77 112 130
COLON (303) 6 12 126
SEMICOLON (304) 4 6 12 25 35 45 46 47 52 67 77 78
COMMA (305) 9 23 66 130
LEFTBRACKET (306) 26
RIGHTBRACKET (307) 26
LEFTSQUAREBRACKET (308) 126
RIGHTSQUAREBRACKET (309) 126


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
programa (56)
    on left: 4, on right: 0
$@1 (57)
    on left: 1, on right: 4
$@2 (58)
    on left: 2, on right: 4
$@3 (59)
    on left: 3, on right: 4
variables (60)
    on left: 6 7, on right: 4
$@4 (61)
    on left: 5, on right: 6
listaids (62)
    on left: 9 10, on right: 6 9 12
$@5 (63)
    on left: 8, on right: 9
varsotrotipo (64)
    on left: 12 13, on right: 6 12
$@6 (65)
    on left: 11, on right: 12
funcion (66)
    on left: 16 17, on right: 4 16
$@7 (67)
    on left: 14, on right: 16
$@8 (68)
    on left: 15, on right: 16
tipoovoid (69)
    on left: 18 19, on right: 16
parametros (70)
    on left: 21 22, on right: 16 23
$@9 (71)
    on left: 20, on right: 21
listaparametros (72)
    on left: 23 24, on right: 21
mapa (73)
    on left: 25, on right: 4
bloque (74)
    on left: 26, on right: 4 16 50 52 54 56
e6 (75)
    on left: 27 28, on right: 26 27
estatuto (76)
    on left: 29 30 31 32 33 34 35 36 37, on right: 26 27
asignacion (77)
    on left: 38, on right: 29
porasignar (78)
    on left: 39, on right: 38
porasignar2 (79)
    on left: 40 41 42, on right: 39
signo (80)
    on left: 43 44, on right: 38
loasignado (81)
    on left: 45 46, on right: 38
escritura (82)
    on left: 47, on right: 31
ciclowhile (83)
    on left: 50, on right: 32
$@10 (84)
    on left: 48, on right: 50
$@11 (85)
    on left: 49, on right: 50
ciclodowhile (86)
    on left: 52, on right: 33
$@12 (87)
    on left: 51, on right: 52
condicion (88)
    on left: 54, on right: 30
$@13 (89)
    on left: 53, on right: 54
condicionelse (90)
    on left: 56 57, on right: 54
$@14 (91)
    on left: 55, on right: 56
llamadafuncion (92)
    on left: 59, on right: 35 123
$@15 (93)
    on left: 58, on right: 59
llamadafuncion2 (94)
    on left: 60 61, on right: 59
paramsllamada (95)
    on left: 64, on right: 61 66
$@16 (96)
    on left: 62, on right: 64
$@17 (97)
    on left: 63, on right: 64
paramsllamada2 (98)
    on left: 65 66, on right: 64
regreso (99)
    on left: 67, on right: 34
lista (100)
    on left: 68, on right: 70
tipo (101)
    on left: 69 70, on right: 6 12 18 21
tiposimple (102)
    on left: 71 72 73 74 75 76, on right: 68 69
agregar (103)
    on left: 77, on right: 36
remover (104)
    on left: 78, on right: 37
expresion (105)
    on left: 80, on right: 25 45 47 50 52 54 64 67 77 82 112 126 130
$@18 (106)
    on left: 79, on right: 80
expresion2 (107)
    on left: 82 83, on right: 80
$@19 (108)
    on left: 81, on right: 82
operadorexpresion (109)
    on left: 84 85 86 87 88 89 90 91, on right: 82
exp (110)
    on left: 93, on right: 80 95
$@20 (111)
    on left: 92, on right: 93
exp2 (112)
    on left: 95 96, on right: 93
$@21 (113)
    on left: 94, on right: 95
operadorexp (114)
    on left: 97 98, on right: 95
termino (115)
    on left: 100, on right: 93 102
$@22 (116)
    on left: 99, on right: 100
termino2 (117)
    on left: 102 103, on right: 100
$@23 (118)
    on left: 101, on right: 102
operadortermino (119)
    on left: 104 105, on right: 102
factor (120)
    on left: 106, on right: 100
factor2 (121)
    on left: 107 108, on right: 106
operadorfactor (122)
    on left: 109 110, on right: 107
obtenerxy (123)
    on left: 112 113 114 115, on right: 106
$@24 (124)
    on left: 111, on right: 112
varcte (125)
    on left: 116 117 118 119 120 121 122 123, on right: 113 114 115
asignable (126)
    on left: 125, on right: 39 116
$@25 (127)
    on left: 124, on right: 125
elemento (128)
    on left: 126 127, on right: 125
entidad (129)
    on left: 130, on right: 46
$@26 (130)
    on left: 128, on right: 130
$@27 (131)
    on left: 129, on right: 130


state 0

    0 $accept: . programa $end
    4 programa: . PROGRAM ID SEMICOLON $@1 variables mapa $@2 funcion $@3 bloque

    PROGRAM  shift, and go to state 1

    programa  go to state 2


state 1

    4 programa: PROGRAM . ID SEMICOLON $@1 variables mapa $@2 funcion $@3 bloque

    ID  shift, and go to state 3


state 2

    0 $accept: programa . $end

    $end  shift, and go to state 4


state 3

    4 programa: PROGRAM ID . SEMICOLON $@1 variables mapa $@2 funcion $@3 bloque

    SEMICOLON  shift, and go to state 5


state 4

    0 $accept: programa $end .

    $default  accept


state 5

    1 $@1: .
    4 programa: PROGRAM ID SEMICOLON . $@1 variables mapa $@2 funcion $@3 bloque

    $default  reduce using rule 1 ($@1)

    $@1  go to state 6


state 6

    4 programa: PROGRAM ID SEMICOLON $@1 . variables mapa $@2 funcion $@3 bloque
    6 variables: . VARS tipo COLON ID $@4 listaids SEMICOLON varsotrotipo
    7          | .  [MAPSIZE]

    VARS  shift, and go to state 7

    $default  reduce using rule 7 (variables)

    variables  go to state 8


state 7

    6 variables: VARS . tipo COLON ID $@4 listaids SEMICOLON varsotrotipo
   68 lista: . LIST tiposimple
   69 tipo: . tiposimple
   70     | . lista
   71 tiposimple: . INT
   72           | . FLOAT
   73           | . POS
   74           | . BOOLEAN
   75           | . STRING
   76           | . ENTITY

    INT      shift, and go to state 9
    FLOAT    shift, and go to state 10
    POS      shift, and go to state 11
    BOOLEAN  shift, and go to state 12
    STRING   shift, and go to state 13
    ENTITY   shift, and go to state 14
    LIST     shift, and go to state 15

    lista       go to state 16
    tipo        go to state 17
    tiposimple  go to state 18


state 8

    4 programa: PROGRAM ID SEMICOLON $@1 variables . mapa $@2 funcion $@3 bloque
   25 mapa: . MAPSIZE expresion SEMICOLON

    MAPSIZE  shift, and go to state 19

    mapa  go to state 20


state 9

   71 tiposimple: INT .

    $default  reduce using rule 71 (tiposimple)


state 10

   72 tiposimple: FLOAT .

    $default  reduce using rule 72 (tiposimple)


state 11

   73 tiposimple: POS .

    $default  reduce using rule 73 (tiposimple)


state 12

   74 tiposimple: BOOLEAN .

    $default  reduce using rule 74 (tiposimple)


state 13

   75 tiposimple: STRING .

    $default  reduce using rule 75 (tiposimple)


state 14

   76 tiposimple: ENTITY .

    $default  reduce using rule 76 (tiposimple)


state 15

   68 lista: LIST . tiposimple
   71 tiposimple: . INT
   72           | . FLOAT
   73           | . POS
   74           | . BOOLEAN
   75           | . STRING
   76           | . ENTITY

    INT      shift, and go to state 9
    FLOAT    shift, and go to state 10
    POS      shift, and go to state 11
    BOOLEAN  shift, and go to state 12
    STRING   shift, and go to state 13
    ENTITY   shift, and go to state 14

    tiposimple  go to state 21


state 16

   70 tipo: lista .

    $default  reduce using rule 70 (tipo)


state 17

    6 variables: VARS tipo . COLON ID $@4 listaids SEMICOLON varsotrotipo

    COLON  shift, and go to state 22


state 18

   69 tipo: tiposimple .

    $default  reduce using rule 69 (tipo)


state 19

   25 mapa: MAPSIZE . expresion SEMICOLON
   59 llamadafuncion: . ID LEFTPARENTHESIS $@15 llamadafuncion2
   80 expresion: . exp $@18 expresion2
   93 exp: . termino $@20 exp2
  100 termino: . factor $@22 termino2
  106 factor: . obtenerxy factor2
  112 obtenerxy: . LEFTPARENTHESIS $@24 expresion RIGHTPARENTHESIS
  113          | . PLUS varcte
  114          | . MINUS varcte
  115          | . varcte
  116 varcte: . asignable
  117       | . CTEINT
  118       | . CTEFLOAT
  119       | . CTESTRING
  120       | . TRUE
  121       | . FALSE
  122       | . CTEPOS
  123       | . llamadafuncion
  125 asignable: . ID $@25 elemento

    ID               shift, and go to state 23
    CTESTRING        shift, and go to state 24
    CTEINT           shift, and go to state 25
    CTEFLOAT         shift, and go to state 26
    CTEPOS           shift, and go to state 27
    TRUE             shift, and go to state 28
    FALSE            shift, and go to state 29
    PLUS             shift, and go to state 30
    MINUS            shift, and go to state 31
    LEFTPARENTHESIS  shift, and go to state 32

    llamadafuncion  go to state 33
    expresion       go to state 34
    exp             go to state 35
    termino         go to state 36
    factor          go to state 37
    obtenerxy       go to state 38
    varcte          go to state 39
    asignable       go to state 40


state 20

    2 $@2: .
    4 programa: PROGRAM ID SEMICOLON $@1 variables mapa . $@2 funcion $@3 bloque

    $default  reduce using rule 2 ($@2)

    $@2  go to state 41


state 21

   68 lista: LIST tiposimple .

    $default  reduce using rule 68 (lista)


state 22

    6 variables: VARS tipo COLON . ID $@4 listaids SEMICOLON varsotrotipo

    ID  shift, and go to state 42


state 23

   59 llamadafuncion: ID . LEFTPARENTHESIS $@15 llamadafuncion2
  124 $@25: .  [X, Y, PLUS, MINUS, MULTIPLICATION, DIVISION, OR, AND, EQUALS, EQUALMORETHAN, EQUALLESSTHAN, NOT, LESSTHAN, MORETHAN, RIGHTPARENTHESIS, COLON, SEMICOLON, COMMA, RIGHTSQUAREBRACKET]
  125 asignable: ID . $@25 elemento

    LEFTPARENTHESIS  shift, and go to state 43

    $default  reduce using rule 124 ($@25)

    $@25  go to state 44


state 24

  119 varcte: CTESTRING .

    $default  reduce using rule 119 (varcte)


state 25

  117 varcte: CTEINT .

    $default  reduce using rule 117 (varcte)


state 26

  118 varcte: CTEFLOAT .

    $default  reduce using rule 118 (varcte)


state 27

  122 varcte: CTEPOS .

    $default  reduce using rule 122 (varcte)


state 28

  120 varcte: TRUE .

    $default  reduce using rule 120 (varcte)


state 29

  121 varcte: FALSE .

    $default  reduce using rule 121 (varcte)


state 30

   59 llamadafuncion: . ID LEFTPARENTHESIS $@15 llamadafuncion2
  113 obtenerxy: PLUS . varcte
  116 varcte: . asignable
  117       | . CTEINT
  118       | . CTEFLOAT
  119       | . CTESTRING
  120       | . TRUE
  121       | . FALSE
  122       | . CTEPOS
  123       | . llamadafuncion
  125 asignable: . ID $@25 elemento

    ID         shift, and go to state 23
    CTESTRING  shift, and go to state 24
    CTEINT     shift, and go to state 25
    CTEFLOAT   shift, and go to state 26
    CTEPOS     shift, and go to state 27
    TRUE       shift, and go to state 28
    FALSE      shift, and go to state 29

    llamadafuncion  go to state 33
    varcte          go to state 45
    asignable       go to state 40


state 31

   59 llamadafuncion: . ID LEFTPARENTHESIS $@15 llamadafuncion2
  114 obtenerxy: MINUS . varcte
  116 varcte: . asignable
  117       | . CTEINT
  118       | . CTEFLOAT
  119       | . CTESTRING
  120       | . TRUE
  121       | . FALSE
  122       | . CTEPOS
  123       | . llamadafuncion
  125 asignable: . ID $@25 elemento

    ID         shift, and go to state 23
    CTESTRING  shift, and go to state 24
    CTEINT     shift, and go to state 25
    CTEFLOAT   shift, and go to state 26
    CTEPOS     shift, and go to state 27
    TRUE       shift, and go to state 28
    FALSE      shift, and go to state 29

    llamadafuncion  go to state 33
    varcte          go to state 46
    asignable       go to state 40


state 32

  111 $@24: .
  112 obtenerxy: LEFTPARENTHESIS . $@24 expresion RIGHTPARENTHESIS

    $default  reduce using rule 111 ($@24)

    $@24  go to state 47


state 33

  123 varcte: llamadafuncion .

    $default  reduce using rule 123 (varcte)


state 34

   25 mapa: MAPSIZE expresion . SEMICOLON

    SEMICOLON  shift, and go to state 48


state 35

   79 $@18: .
   80 expresion: exp . $@18 expresion2

    $default  reduce using rule 79 ($@18)

    $@18  go to state 49


state 36

   92 $@20: .
   93 exp: termino . $@20 exp2

    $default  reduce using rule 92 ($@20)

    $@20  go to state 50


state 37

   99 $@22: .
  100 termino: factor . $@22 termino2

    $default  reduce using rule 99 ($@22)

    $@22  go to state 51


state 38
